--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "jest": "^29.7.0",
     "nodemon": "^3.1.10",
     "pino-pretty": "^11.2.2",
-    "playwright": "^1.56.1"
+    "playwright": "^1.56.1",
+    "terser": "^5.44.1"
   },
   "dependencies": {
     "dotenv": "^17.2.3",
